tests/int/use_command/snapshots/integration__int__use_command__depth__modules_lib_depth_e_G.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - lib
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::empty_module::Standalone

----- stderr -----
