tests/int/use_command/snapshots/integration__int__use_command__depth__modules_lib_depth_r_e_d_1.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - lib
    - "-r"
    - "-e"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
crate::advanced_globs
crate::aliased
crate::custom_path
crate::dir_module
crate::empty_module
crate::file_module
crate::file_module::*
crate::file_module::{*}
crate::foo
crate::glob_patterns
crate::glob_showcase
crate::inline_modules
crate::inline_modules::*
crate::item_visibility
crate::mixed
crate::nesting
crate::no_pub_items::*
crate::reexports
crate::visibility
crate::visibility::*

----- stderr -----
