tests/int/use_command/snapshots/integration__int__use_command__depth__modules_lib_depth_r_e_d_2.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - lib
    - "-r"
    - "-e"
    - "-d"
    - "2"
---
success: true
exit_code: 0
----- stdout -----
crate::Standalone
crate::advanced_globs::Consumer
crate::advanced_globs::MultiImpl
crate::advanced_globs::Provider
crate::advanced_globs::Transformer
crate::advanced_globs::aliased_module
crate::advanced_globs::deep_function
crate::advanced_globs::enum_variants::*
crate::advanced_globs::internal::*
crate::advanced_globs::layer1
crate::advanced_globs::layer1::*
crate::advanced_globs::layer1_function
crate::advanced_globs::layer2_function
crate::advanced_globs::macro_module::*
crate::advanced_globs::original::*
crate::advanced_globs::shadowing
crate::advanced_globs::trait_providers::*
crate::advanced_globs::unix_specific::*
crate::advanced_globs::windows_specific::*
crate::aliased
crate::custom_path::greet
crate::dir_module
crate::dir_module::child_file
crate::dir_module::greet
crate::empty_module::Standalone
crate::file_module
crate::file_module::*
crate::file_module::greet
crate::file_module::nesting_depth
crate::file_module::{*}
crate::foo::bar
crate::foo::bar::*
crate::glob_patterns::constants::*
crate::glob_patterns::mixed_exports
crate::glob_patterns::outer
crate::glob_patterns::outer::*
crate::glob_patterns::self_ref::*
crate::glob_patterns::set_a::*
crate::glob_patterns::set_b::*
crate::glob_patterns::traits::*
crate::glob_patterns::types::*
crate::glob_patterns::utilities::*
crate::glob_showcase::ErrorKind
crate::glob_showcase::Status
crate::glob_showcase::api
crate::glob_showcase::api::*
crate::glob_showcase::config
crate::glob_showcase::database
crate::glob_showcase::database::*
crate::glob_showcase::errors
crate::glob_showcase::errors::*
crate::glob_showcase::models
crate::glob_showcase::models::*
crate::glob_showcase::traits
crate::glob_showcase::traits::*
crate::glob_showcase::utils
crate::inline_modules
crate::inline_modules::*
crate::inline_modules::nested
crate::inline_modules::outer
crate::inline_modules::private_inline
crate::item_visibility::PUB_CONST
crate::item_visibility::PUB_STATIC
crate::mixed::file_child
crate::mixed::greet
crate::nesting
crate::nesting::depth
crate::nesting::level1
crate::no_pub_items
crate::no_pub_items::*
crate::no_pub_items::exercise_private
crate::reexports::Foo
crate::reexports::internal
crate::reexports::types::*
crate::visibility
crate::visibility::*
crate::visibility::inner
crate::visibility::private_mod
crate::visibility::pub_crate_mod
crate::visibility::pub_mod
crate::visibility::pub_super_mod
crate::visibility::restricted_mod

----- stderr -----
